use nanotime instead curreTimeMilllis